--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@dnd-kit/core": "^6.0.0",
+    "@dnd-kit/sortable": "^7.0.0",
+    "@dnd-kit/utilities": "^3.2.1",
     "ajv": "^8.12.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
