--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase": "^10.12.2",
     "framer-motion": "^10.16.4",
     "multer": "^2.0.1",
     "react": "^18.2.0",
